projects/vb6parse/snapshots/parsers/cst/control_flow/loop/while_with_select_case.snap
---
source: projects/vb6parse/tests/control_flow/loop_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: running
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: SelectCaseStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: SelectKeyword
                          text: Select
                        - kind: Whitespace
                          text: " "
                        - kind: CaseKeyword
                          text: Case
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: action
                        - kind: Newline
                          text: "\n"
                        - kind: Whitespace
                          text: "            "
                        - kind: CaseClause
                          children:
                            - kind: CaseKeyword
                              text: Case
                            - kind: Whitespace
                              text: " "
                            - kind: IntegerLiteral
                              text: "1"
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: Whitespace
                                  text: "                "
                                - kind: CallStatement
                                  children:
                                    - kind: Identifier
                                      text: DoAction1
                                    - kind: Newline
                                      text: "\n"
                                - kind: Whitespace
                                  text: "            "
                        - kind: CaseClause
                          children:
                            - kind: CaseKeyword
                              text: Case
                            - kind: Whitespace
                              text: " "
                            - kind: IntegerLiteral
                              text: "2"
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: Whitespace
                                  text: "                "
                                - kind: CallStatement
                                  children:
                                    - kind: Identifier
                                      text: DoAction2
                                    - kind: Newline
                                      text: "\n"
                                - kind: Whitespace
                                  text: "        "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: SelectKeyword
                          text: Select
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
